...
            android:text="C a m e r a  S t o r e"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="" />

        <LinearLayout
            android:id="@+id/btnSplashStart"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:elevation="10dp"
            android:gravity="center"
...
